fix: explicitly hid y-overflow

--- a/app/static/css/global.css
+++ b/app/static/css/global.css
@@ -4,6 +4,8 @@ main {
 
 pre {
 	overflow-x: auto;
+	overflow-y: hidden;
+	padding-bottom: 10px;
 }
 
 .home-wrapper {
